--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -4,23 +4,26 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "py_intelligent_stock_market_api_YOUR_mobius-crypt"
-version = "0.0.3"
+version = "0.0.6"
 authors = [
-  { name="AJ Ndou", email="justice@eod-stock-api.site" },
+  { name="MJ API Development", email="support@eod-stock-api.site" },
 ]
 description="An Intelligent EOD Stock Market, Financial News & Financial Social Media Trends API"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: >= 3.7",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 
 [project.urls]
-"Homepage" = "https://eod-stock-api.site"
-"Bug Tracker" = "https://github.com/MJ-API-Development/stock-api-pythonsdk/issues"
-"Gateway" = "https://gateway.eod-stock-api.site"
+'Intelligent Stock Market API'= 'https://eod-stock-api.site'
+'Subscribe API Keys'= 'https://eod-stock-api.site/login#signup'
+'API Gateway'= 'https://gateway.eod-stock-api.site'
+'Documentation' = 'https://github.com/MJ-API-Development/stock-api-pythonsdk'
+'Source'= 'https://github.com/MJ-API-Development/stock-api-pythonsdk'
+'Bug Tracker'= 'https://github.com/MJ-API-Development/stock-api-pythonsdk/issues'
 
 [project.dependencies]
 certifi="14.05.14"
