--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -1,12 +1,6 @@
 # ref: https://docs.travis-ci.com/user/languages/python
 language: python
 python:
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.6"
   - "3.7"
   - "3.8"
 # command to install dependencies
@@ -14,4 +8,4 @@ install:
   - "pip install -r requirements.txt"
   - "pip install -r test-requirements.txt"
 # command to run tests
-script: pytest --cov=openapi_client
+script: pytest --cov=intelligentStockMarketAPI
